[package]
name = "volume_fix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.windows]
version = "0.25.0"
features = [
    # "Data_Xml_Dom",
    # "Win32_Security",
    # "Win32_System_Threading",
    # "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Globalization", # // MultiByte
    "Win32_System_Com",
    "Win32_Media_Audio_CoreAudio",
    "Win32_System_PropertiesSystem",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole_Automation",
]